--- a/manifest.json
+++ b/manifest.json
@@ -1,26 +1,21 @@
 {
   "name": "Kalkulator Angsuran Motor",
-  "short_name": "Kalkulator",
-  "description": "Aplikasi Kalkulator Angsuran Motor dengan fitur simulasi cicilan, DP, dan bunga.",
+  "short_name": "Angsuran Motor",
   "start_url": "./index.html",
-  "scope": "./",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#4461ff",
   "orientation": "portrait",
-  "id": "kalkulator-angsuran",
   "icons": [
     {
       "src": "icons/icon-192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     },
     {
       "src": "icons/icon-512.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     }
   ]
 }
